# EventBuddy

./: .env.example  .gitignore  AGENTS.md  EventBuddy-AppStructure.md  EventBuddy-DataExport-Implementation.md  EventBuddy-DataImport-Implementation.md  EventBuddy-PRD.md  EventBuddy-SyncFrequency.md  EventBuddy-TechnicalPlan.md  EventBuddy-UserJourney.md  EventBuddy-WWDC26-EventSources.md  EventBuddyWidgetsExtension.entitlements  LICENSE.md  README.md  WWDCBuddy-ASO-Keyword-Research.md  package-lock.json  package.json
.codex/environments/: environment.toml
.cursor/rules/: ui-rule.mdc
CLI/: Cargo.toml  build.rs  wwdcbuddy-info.plist
CLI/src/: main.rs
EventBuddy/: ContentView.swift  EventBuddy.entitlements  EventBuddyApp.swift  EventBuddyMac.entitlements  Info.plist  NavigationCoordinator.swift  events.json
EventBuddy.xcodeproj/: project.pbxproj
EventBuddy/Models/: Event.swift  EventFriendService.swift  Friend.swift  ModelConfiguration.swift  NameDropService.swift  (+3 more)
EventBuddyWidgets/: AppIntent.swift  EventBuddyWidget.swift  EventBuddyWidgets.swift  EventBuddyWidgetsAttributes.swift  EventBuddyWidgetsBundle.swift  EventBuddyWidgetsControl.swift  EventBuddyWidgetsLiveActivity.swift  QRCodeView.swift  QRCodeWidget.swift  README-QRCodeWidget.md  WidgetDataProvider.swift  WidgetViews.swift
docs/: wwdcbuddy-cli.md
raycast-extension/: README.md  package-lock.json  package.json
raycast-extension-prebuilt/: browse-relations.js  package.json  search-events.js  search-friends.js
script/: build_and_run.sh  bundle_raycast_extension.sh  publish_events_json.sh
(+77 files in other folders)
